territories in web UI
